--- a/views/index.html
+++ b/views/index.html
@@ -5,14 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title translate="TITLE"></title>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.4/angular.min.js"></script>
+    <script src="/js/lib/angular-translate.min.js"></script>
+
+    <script src="/js/core.js"></script>
+    <script src="/js/translations.js"></script>
+    <script src="/js/MainCtrl.js"></script>
   </head>
 
   <body ng-cloak ng-controller="MainCtrl" ng-init="init()">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
-    <script src="/js/lib/angular-translate.min.js"></script>
-    <script src="/js/core.js"></script>
-    <script src="/js/translations.js"></script>
-    <script src="/js/MainCtrl.js"></script>
+    <div class="container">
+
+      <div class="row row-offcanvas row-offcanvas-right">
+
+        <div class="col-xs-12 col-sm-9">
+          <p class="pull-right visible-xs">
+            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
+          </p>
+          <div class="jumbotron">
+          </div>
+          <div class="row">
+            <div class="col-6 col-sm-6 col-lg-4">
+              <h2>window</h2>
+              <p>test</p>
+              <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
+            </div><!--/span-->
+          </div><!--/row-->
+        </div><!--/span-->
+
+        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
+          <div class="list-group">
+            <a href="#" class="list-group-item active">Link1</a>
+            <a href="#" class="list-group-item">Link2</a>
+          </div>
+        </div><!--/span-->
+      </div><!--/row-->
+
+      <hr/>
+
+      <footer>
+        <p></p>
+      </footer>
+    </div>
   </body>
 </html>
