--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
     <link href="/css/style.css" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.4/angular.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/js/lib/angular-translate.min.js"></script>
 
     <script src="/js/core.js"></script>
