--- a/views/login.html
+++ b/views/login.html
@@ -18,7 +18,7 @@
       <form action="/" name="loginForm" class="form-signin" method="post">
         <input type="text" class="form-control" ng-model="loginType" name="login" required autofocus placeholder="{{ 'Login' | translate }}" />
         <input type="password" class="form-control" ng-model="passwordType" name="password" required placeholder="{{ 'Password' | translate }}" />
-        <button type="submit" class="btn btn-lg btn-primary btn-block" translate="{{ 'Sign in/Sign up' | translate }}"></button>
+        <button type="submit" class="btn btn-lg btn-primary btn-block">{{ 'Sign in/Sign up' | translate }}</button>
       </form>
     </div>
   </body>
