--- a/views/templates/navbar.html
+++ b/views/templates/navbar.html
@@ -7,18 +7,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">Meetings</a>
+      <a ng-href="/" class="navbar-brand">{{ 'TITLE' | translate }}</a>
     </div>
     <div class="collapse navbar-collapse">
+
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <a href="#">
-            <span class="glyphicon glyphicon-search"></span>
-            {{ 'Find' | translate }}
-          </a>
-        </li>
         <li class="dropdown">
-          <a data-toggle="dropdown" class="dropdown-toggle" href="#">{{ current_user }}<b class="caret"></b></a>
+          <a data-toggle="dropdown" class="dropdown-toggle" href="#"> {{ current_user.login }} <b class="caret"></b></a>
           <ul role="menu" class="dropdown-menu">
             <li>
               <a href="#" ng-click="MainCtrl.logout('/logout')">{{ 'Sign out' | translate }}</a>
@@ -26,6 +21,17 @@
           </ul>
         </li>
       </ul>
+
+      <form class="navbar-form navbar-right" role="search" style="width:300px;">
+        <div class="form-group">
+          <div class="input-group">
+            <input type="text" class="form-control">
+            <span class="input-group-btn">
+              <button class="btn btn-default" type="button">{{ 'Find' | translate }}</button>
+            </span>
+          </div><!-- /input-group -->
+        </div>
+      </form>
 
     </div><!-- /.nav-collapse -->
   </div><!-- /.container -->
