--- a/views/index.html
+++ b/views/index.html
@@ -2,20 +2,45 @@
 <html ng-app="MEETINGS">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title translate="TITLE"></title>
+
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
     <link href="/css/style.css" rel="stylesheet">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.5/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/lib/angular-translate.min.js"></script>
 
-    <script src="/js/core.js"></script>
+    <script type="text/javascript">
+      var app = angular.module('MEETINGS', ['pascalprecht.translate']);
+    </script>
+
+    <script src="/js/proxy.js"></script>
+
+    <script type="text/javascript">
+        // init connector
+        new app.proxy("http://localhost", function() {
+            this
+                .on('connect', function () {
+                    console.info('connection established');
+                })
+                .on('logout', function() {
+                    location.href = '/';
+                })
+            ;
+        });
+    </script>
+
     <script src="/js/translations.js"></script>
     <script src="/js/MainCtrl.js"></script>
+
+    <!-- directives  -->
+
+    <script src="/js/directives/search.js"></script>
   </head>
 
   <body ng-cloak ng-controller="MainCtrl" ng-init="MainCtrl.init()">
