--- a/views/templates/navbar.html
+++ b/views/templates/navbar.html
@@ -22,16 +22,7 @@
         </li>
       </ul>
 
-      <form class="navbar-form navbar-right" role="search" style="width:300px;">
-        <div class="form-group">
-          <div class="input-group">
-            <input type="text" class="form-control">
-            <span class="input-group-btn">
-              <button class="btn btn-default" type="button">{{ 'Find' | translate }}</button>
-            </span>
-          </div><!-- /input-group -->
-        </div>
-      </form>
+      <div search></div>
 
     </div><!-- /.nav-collapse -->
   </div><!-- /.container -->
