--- a/views/templates/navbar.html
+++ b/views/templates/navbar.html
@@ -1,5 +1,6 @@
 <div role="navigation" class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
+
     <div class="navbar-header">
       <button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
         <span class="sr-only">Toggle navigation</span>
@@ -9,6 +10,7 @@
       </button>
       <a ng-href="/" class="navbar-brand">{{ 'TITLE' | translate }}</a>
     </div>
+
     <div class="collapse navbar-collapse">
 
       <ul class="nav navbar-nav navbar-right">
@@ -24,6 +26,7 @@
 
       <div search></div>
 
+      <div events></div>
     </div><!-- /.nav-collapse -->
   </div><!-- /.container -->
 </div>
