--- a/views/index.html
+++ b/views/index.html
@@ -17,6 +17,9 @@
 
     <script type="text/javascript">
       var app = angular.module('MEETINGS', ['pascalprecht.translate']);
+
+      // init promises storage
+      app.promises = [];
     </script>
 
     <script src="/js/proxy.js"></script>
@@ -38,6 +41,8 @@
 
     <script src="/js/directives/search.js"></script>
     <script src="/js/directives/friends.js"></script>
+    <script src="/js/directives/events.js"></script>
+    <script src="/js/directives/chat.js"></script>
   </head>
 
   <body ng-cloak ng-controller="MainCtrl" ng-init="MainCtrl.init()">
@@ -48,20 +53,7 @@
     <div class="container">
       <div class="row row-offcanvas row-offcanvas-right">
 
-        <div class="col-xs-12 col-sm-9">
-          <p class="pull-right visible-xs">
-            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
-          </p>
-          <div class="jumbotron">
-          </div>
-          <div class="row">
-            <div class="col-6 col-sm-6 col-lg-4">
-              <h2>window</h2>
-              <p>test</p>
-              <p><a class="btn btn-default" href="#" role="button">View details »</a></p>
-            </div><!--/span-->
-          </div><!--/row-->
-        </div><!--/span-->
+        <div chat></div>
 
         <div friends></div>
 
