--- a/views/templates/friends.html
+++ b/views/templates/friends.html
@@ -1,5 +1,5 @@
-<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
-  <div class="list-group">
+<div class="col-xs-6 sidebar-offcanvas ng-class: {'col-sm-3': chat, 'col-sm-10': !chat}" id="sidebar" role="navigation">
+  <div class="list-group friends">
     <a href="#" class="list-group-item" ng-click="open_chat(friend)"  ng-repeat="friend in friends">
       {{ friend.username || friend.login }}
       <span ng-click="remove_from_friends(friend)" class="remove-from-friends glyphicon glyphicon-minus"></span>
