--- a/views/templates/navbar.html
+++ b/views/templates/navbar.html
@@ -18,7 +18,7 @@
           <a data-toggle="dropdown" class="dropdown-toggle" href="#"> {{ current_user.login }} <b class="caret"></b></a>
           <ul role="menu" class="dropdown-menu">
             <li>
-              <a href="#" ng-click="MainCtrl.logout('/logout')">{{ 'Sign out' | translate }}</a>
+              <a ng-click="MainCtrl.logout('/logout')">{{ 'Sign out' | translate }}</a>
             </li>
           </ul>
         </li>
