--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,7 @@
 
     <!-- ................................................................... -->
 
-    <div class="container">
+    <div class="container" ng-class="{'full_screen': full_screen}">
       <div class="row row-offcanvas row-offcanvas-right">
 
         <div chat></div>
@@ -62,7 +62,7 @@
       <hr/>
 
       <footer>
-        <p></p>
+        <p>{{ 'footer' | translate }}</p>
       </footer>
     </div>
   </body>
