--- a/views/templates/events.html
+++ b/views/templates/events.html
@@ -1,7 +1,7 @@
 <ul class="nav navbar-nav navbar-right">
-  <li class="dropdown invitations_to_friends" ng-hide="!amount_of_received_invitations">
+  <li class="dropdown invitations_to_friends" ng-hide="!invitations.length">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-      <span class="label label-info">{{ amount_of_received_invitations }}</span>
+      <span class="label label-info">{{ invitations.length }}</span>
       <b class="caret"></b>
     </a>
 
@@ -17,16 +17,16 @@
   </li> <!-- dropdown -->
 
 
-  <li class="dropdown new_messages"  ng-hide="!amount_of_new_messages">
+  <li class="dropdown new_messages"  ng-hide="!unread_chats.length">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-      <span class="label label-warning">{{ amount_of_new_messages }}</span>
+      <span class="label label-warning">{{ unread_chats.length }}</span>
       <b class="caret"></b>
     </a>
 
     <ul class="dropdown-menu">
       <li>
-        <a href="#" ng-repeat="message in not_read_messages">
-          {{ message }}
+        <a href="#" ng-repeat="chat in unread_chats" ng-click="open_chat(chat._id)">
+          {{ ('unread messages in chat' | translate) + ' "' + chat.name + '"' }}
         </a>
       </li>
     </ul>
