--- a/views/templates/friends.html
+++ b/views/templates/friends.html
@@ -1,8 +1,11 @@
-<div class="col-xs-6 sidebar-offcanvas ng-class: {'col-sm-3': chat, 'col-sm-10': !chat}" id="sidebar" role="navigation">
+<div class="col-xs-6 sidebar-offcanvas ng-class: {'col-sm-3': chat, 'col-sm-10': !chat}" id="sidebar" role="navigation" ng-hide="full_screen">
   <div class="list-group friends">
     <a href="#" class="list-group-item" ng-click="open_chat(friend)"  ng-repeat="friend in friends">
       {{ friend.username || friend.login }}
       <span ng-click="remove_from_friends(friend)" class="remove-from-friends glyphicon glyphicon-minus"></span>
+    </a>
+    <a href="#" class="list-group-item" ng-click="open_chat();" ng-repeat="chat in chats">
+      {{ chat }}
     </a>
   </div>
 </div>
