--- a/views/templates/chat.html
+++ b/views/templates/chat.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 chat ng-class: {'opened': chat, 'col-sm-12': full_screen, 'col-sm-9': !full_screen}">
-  <span class="title">{{ chat.username || chat.login }}</span>
+  <span class="title">{{ chat.name }}</span>
 
   <div class="control-panel">
     <div class="glyphicon glyphicon-fullscreen" ng-click="expand_full_screen();" ng-tooltip="{{ 'full screen' | translate }}"></div>
