--- a/views/templates/friends.html
+++ b/views/templates/friends.html
@@ -1,10 +1,10 @@
 <div class="col-xs-6 sidebar-offcanvas ng-class: {'col-sm-3': chat, 'col-sm-10': !chat}" id="sidebar" role="navigation" ng-hide="full_screen">
   <div class="list-group friends">
-    <a href="#" class="list-group-item" ng-click="open_chat(friend)"  ng-repeat="friend in friends">
-      {{ friend.username || friend.login }}
-      <span ng-click="remove_from_friends(friend)" class="remove-from-friends glyphicon glyphicon-minus"></span>
+    <a href="#" class="list-group-item" ng-click="open_chat(f.chat)"  ng-repeat="f in friends">
+      {{ f.friend.username || f.friend.login }}
+      <span ng-click="remove_from_friends(f.friend)" class="remove-from-friends glyphicon glyphicon-minus"></span>
     </a>
-    <a href="#" class="list-group-item" ng-click="open_chat();" ng-repeat="chat in chats">
+    <a href="#" class="list-group-item" ng-click="open_chat(chat);" ng-repeat="chat in chats">
       {{ chat }}
     </a>
   </div>
