fixed some bugs

--- a/views/templates/chat.html
+++ b/views/templates/chat.html
@@ -4,13 +4,26 @@
   <div class="control-panel">
     <div class="glyphicon glyphicon-fullscreen" ng-click="expand_full_screen();" ng-tooltip="{{ 'full screen' | translate }}"></div>
     <div class="glyphicon glyphicon-plus" ng-click="addition_people();" ng-tooltip="{{ 'add people' | translate }}"></div>
+    <div class="glyphicon glyphicon-earphone" ng-click="call();" ng-tooltip="{{ 'call' | translate }}"></div>
   </div>
 
   <hr/>
 
   <div class="messages">
     <div ng-repeat="message in messages">
-      {{message.created_at | date:'HH:mm:ss'}} <b>{{ message.from.username || message.from.login }}:</b> {{ message.body }}
+      <span>
+        {{message.created_at | date:'HH:mm:ss'}}
+        <b>
+          {{
+          messages[$index - 1].from._id == message.from._id
+          ?
+          '...'
+          :
+          (message.from.username || message.from.login) + ':'
+          }}
+        </b>
+      </span>
+      <span ng-bind-html="message.body | noHTML | newlines | links"></span>
     </div>
   </div>
 
@@ -18,7 +31,7 @@
 
   <form class="form-inline" role="form">
     <div class="form-group ng-class: {'has-success': new_message.length > 0}">
-      <textarea class="form-control" ng-enter="send_message(new_message)" ng-model="new_message" rows="3"></textarea>
+      <textarea class="form-control" ng-shift-enter="send_message" ng-model="new_message" rows="3"></textarea>
       <button type="button" ng-click="send_message(new_message)" class="btn btn-default btn-lg">{{ 'Send' | translate }}</button>
     </div>
   </form>
