--- a/views/index.html
+++ b/views/index.html
@@ -10,13 +10,14 @@
     <link href="/css/style.css" rel="stylesheet">
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/lib/angular-translate.min.js"></script>
+    <script src="http://code.angularjs.org/1.2.7/angular-sanitize.min.js"></script>
 
     <script type="text/javascript">
-      var app = angular.module('MEETINGS', ['pascalprecht.translate']);
+      var app = angular.module('MEETINGS', ['pascalprecht.translate', 'ngSanitize']);
 
       // init promises storage
       app.promises = [];
