--- a/views/index.html
+++ b/views/index.html
@@ -44,6 +44,7 @@
     <script src="/js/directives/friends.js"></script>
     <script src="/js/directives/events.js"></script>
     <script src="/js/directives/chat.js"></script>
+    <script src="/js/directives/call.js"></script>
   </head>
 
   <body ng-cloak ng-controller="MainCtrl" ng-init="MainCtrl.init()">
