--- a/views/templates/chat.html
+++ b/views/templates/chat.html
@@ -8,6 +8,10 @@
 
   <hr/>
 
+  <div call></div>
+
+  <hr ng-hide="!chat.calling"/>
+
   <div class="messages">
     <div ng-repeat="message in messages">
       <span>
