--- a/views/templates/events.html
+++ b/views/templates/events.html
@@ -16,7 +16,6 @@
     </ul>
   </li> <!-- dropdown -->
 
-
   <li class="dropdown new_messages"  ng-hide="!unread_chats.length">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
       <span class="label label-warning">{{ unread_chats.length }}</span>
@@ -25,7 +24,7 @@
 
     <ul class="dropdown-menu">
       <li>
-        <a href="#" ng-repeat="chat in unread_chats" ng-click="open_chat(chat._id)">
+        <a href="#" ng-repeat="chat in unread_chats" ng-click="open_chat(chat)">
           {{ ('unread messages in chat' | translate) + ' "' + chat.name + '"' }}
         </a>
       </li>
