--- a/views/templates/friends.html
+++ b/views/templates/friends.html
@@ -1,5 +1,5 @@
-<div class="col-xs-6 sidebar-offcanvas ng-class: {'col-sm-3': chat, 'col-sm-10': !chat}" id="sidebar" role="navigation" ng-hide="full_screen">
-  <div class="list-group friends">
+<div class="col-xs-6 sidebar-offcanvas ng-class: {'col-sm-3 mobile-friends': chat, 'col-sm-10': !chat}" id="sidebar" role="navigation" ng-hide="full_screen">
+  <div class="list-group friends ng-class: {'fixed': chat}">
     <a href="#" class="list-group-item ng-class: {'active': f.chat._id == chat._id}" ng-dblclick="open_chat(f.chat)" ng-repeat="f in friends">
       {{ f.friend.username || f.friend.login }}
       <div>
