--- a/views/index.html
+++ b/views/index.html
@@ -13,6 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+
     <script src="/js/lib/angular-translate.min.js"></script>
     <script src="http://code.angularjs.org/1.2.7/angular-sanitize.min.js"></script>
 
@@ -45,6 +46,7 @@
     <script src="/js/directives/events.js"></script>
     <script src="/js/directives/chat.js"></script>
     <script src="/js/directives/call.js"></script>
+    <script src="/js/directives/addition_to_chat.js"></script>
   </head>
 
   <body ng-cloak ng-controller="MainCtrl" ng-init="MainCtrl.init()">
