--- a/views/templates/chat.html
+++ b/views/templates/chat.html
@@ -39,7 +39,7 @@
 
   <hr style="width:100%;float:left;"/>
 
-  <form class="form-inline" role="form">
+  <form class="form-inline form-parcel" role="form">
     <div class="form-group ng-class: {'has-success': new_message.length > 0}">
       <textarea class="form-control" ng-shift-enter="send_message" ng-model="new_message" rows="3"></textarea>
       <button type="button" ng-click="send_message(new_message)" class="btn btn-default btn-lg">
