--- a/views/templates/friends.html
+++ b/views/templates/friends.html
@@ -1,6 +1,6 @@
 <div class="sidebar-offcanvas ng-class: {'col-sm-3 mobile-friends': chat, 'col-sm-10': !chat}" id="sidebar" role="navigation" ng-hide="full_screen">
   <div class="list-group friends ng-class: {'fixed': chat}">
-    <a href="#" class="list-group-item ng-class: {'active': f.f.chat._id == chat._id}" ng-dblclick="open_chat(f.f.chat)" ng-repeat="f in friends">
+    <div href="#" class="list-group-item ng-class: {'active': f.f.chat._id == chat._id}" ng-dblclick="open_chat(f.f.chat)" ng-repeat="f in friends">
       <span ng-class="{'online': f.online, 'offline': !f.online}"></span>
       <span>{{ f.f.friend.username || f.f.friend.login }}</span>
       <div>
@@ -29,9 +29,9 @@
            ng-tooltip="{{ 'remove from friends' | translate }}">
         </div>
       </div>
-    </a>
+    </div>
 
-    <a href="#" class="list-group-item ng-class: {'active': chat._id == ch._id}" ng-click="open_chat(ch);" ng-repeat="ch in chats">
+    <div class="list-group-item ng-class: {'active': chat._id == ch._id}" ng-click="open_chat(ch);" ng-repeat="ch in chats">
       <span>{{ ch.name }}</span>
       <div>
         <div
@@ -40,6 +40,6 @@
            ng-tooltip="{{ 'open chat' | translate }}">
         </div>
       </div>
-    </a>
+    </div>
   </div>
 </div>
