--- a/views/templates/friends.html
+++ b/views/templates/friends.html
@@ -1,30 +1,30 @@
 <div class="sidebar-offcanvas ng-class: {'col-sm-3 mobile-friends': chat, 'col-sm-10': !chat}" id="sidebar" role="navigation" ng-hide="full_screen">
   <div class="list-group friends ng-class: {'fixed': chat}">
-    <div href="#" class="list-group-item ng-class: {'active': f.f.chat._id == chat._id}" ng-dblclick="open_chat(f.f.chat)" ng-repeat="f in friends">
+    <div class="list-group-item ng-class: {'active': f.f.chat._id == chat._id}" ng-click="open_chat(f.f.chat)" ng-repeat="f in friends">
       <span ng-class="{'online': f.online, 'offline': !f.online}"></span>
       <span>{{ f.f.friend.username || f.f.friend.login }}</span>
       <div>
         <div
-           class="glyphicon glyphicon-comment"
-           ng-click="open_chat(f.f.chat);"
-           ng-tooltip="{{ 'open chat' | translate }}">
+           class="fa fa-envelope unread"
+           ng-if="f.f.chat.not_read.indexOf(current_user._id) != -1"
+           >
         </div>
 
         <div
-           class="glyphicon glyphicon-earphone"
+           class="fa fa-phone"
            ng-click="call(f.f.chat);"
            ng-tooltip="{{ 'call' | translate }}">
         </div>
 
         <div addition_to_chat="{{ f.f.friend._id }}"
-           class="add-to-chat glyphicon glyphicon-log-in"
+           class="add-to-chat fa fa-sign-in"
            draggable="true"
            ng-if="f.f.chat._id != chat._id"
            ng-tooltip="{{ 'add people' | translate }}">
         </div>
 
         <div
-           class="remove-from-friends glyphicon glyphicon-minus"
+           class="remove-from-friends fa fa-minus"
            ng-click="remove_from_friends(f.f.friend)"
            ng-tooltip="{{ 'remove from friends' | translate }}">
         </div>
@@ -35,9 +35,9 @@
       <span>{{ ch.name }}</span>
       <div>
         <div
-           class="glyphicon glyphicon-comment"
-           ng-click="open_chat(ch);"
-           ng-tooltip="{{ 'open chat' | translate }}">
+           class="fa fa-envelope unread"
+           ng-if="ch.not_read.indexOf(current_user._id) != -1"
+           >
         </div>
       </div>
     </div>
