--- a/views/templates/friends.html
+++ b/views/templates/friends.html
@@ -1,6 +1,9 @@
-<div class="sidebar-offcanvas ng-class: {'col-sm-3 mobile-friends': chat, 'col-sm-10': !chat}" id="sidebar" role="navigation" ng-hide="full_screen">
-  <div class="list-group friends ng-class: {'fixed': chat}">
-    <div class="list-group-item ng-class: {'active': f.f.chat._id == chat._id}" ng-click="open_chat(f.f.chat)" ng-repeat="f in friends">
+<div class="sidebar-offcanvas col-sm-3 mobile-friends" id="sidebar" role="navigation" ng-hide="full_screen">
+  <div class="list-group friends fixed">
+    <div
+       class="list-group-item ng-class: {'active': f.f.chat._id == chat._id}"
+       ng-click="get_chat_and_open_by_friend_id(f.f.friend._id)"
+       ng-repeat="f in friends">
       <span ng-class="{'online': f.online, 'offline': !f.online}"></span>
       <span>{{ f.f.friend.username || f.f.friend.login }}</span>
       <div>
