--- a/views/templates/chat.html
+++ b/views/templates/chat.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 chat ng-class: {'opened': chat, 'col-sm-12': full_screen, 'col-sm-9': !full_screen}">
+<div class="col-xs-12 chat opened ng-class: {'col-sm-12': full_screen, 'col-sm-9': !full_screen}">
   <span class="title">{{ chat.name }}</span>
 
   <div class="control-panel">
@@ -31,7 +31,7 @@
   </div>
 
   <div class="participants">
-    <div ng-repeat="participant in chat.participants">
+    <div ng-repeat="participant in chat.participants" ng-click="get_chat_and_open_by_friend_id(participant._id)">
       <span ng-class="{'online': participant.online, 'offline': !participant.online}"></span>
       {{ participant.username || participant.login }}
     </div>
